# QtFluentWidgets

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.en-US.md  README.md  README.zh-CN.md
demo/: DemoHelpers.cpp  DemoHelpers.h  DemoSidebar.cpp  DemoSidebar.h  DemoWindow.cpp  DemoWindow.h  lottie_assets.qrc  main.cpp
demo/assets/lottie/: README.md
demo/pages/: PageAngleControls.cpp  PageAngleControls.h  PageBasicInput.cpp  PageButtons.cpp  PageContainers.cpp  PageDataViews.cpp  PageIcons.cpp  PageIcons.h  PageInputs.cpp  PageInputs.h  PageMotion.cpp  PageMotion.h  PageOverview.cpp  PagePickers.cpp  PageWindows.cpp
demo/sidebar/: DemoThemePanel.cpp  DemoThemePanel.h
designer/: FluentWidgetsPlugin.cpp
docs/en-us/: angle-controls.md  animated-icon-plan.md  buttons.md  code-editor.md  containers-layout.md  data-views.md  designer-compat-test.md  icons.md  inputs.md  lottie.md  navigation-view.md  pickers.md  theme-style.md  utilities.md  windows-dialogs.md
docs/zh-cn/: angle-controls.md  animated-icon-plan.md  buttons.md  code-editor.md  containers-layout.md  data-views.md  designer-compat-test.md  icons.md  inputs.md  lottie.md  navigation-view.md  pickers.md  theme-style.md  utilities.md  windows-dialogs.md
include/Fluent/: FluentAccentBorderTrace.h  FluentAngleSelector.h  FluentAnimatedButton.h  FluentAnimatedIcon.h  FluentAnnotatedScrollBar.h  FluentAutoSuggestBox.h  FluentBorderEffect.h  FluentButton.h  FluentCalendarPicker.h  FluentCard.h  FluentCheckBox.h  FluentCodeEditor.h  FluentColorDialog.h  FluentColorPicker.h  FluentComboBox.h  FluentCommandBar.h  FluentCppHighlighter.h  FluentDatePicker.h  FluentDateRangePicker.h  FluentDiagnostics.h  FluentDial.h  FluentDialog.h  FluentDropDownButton.h  FluentExport.h  FluentFlowLayout.h  FluentFlyout.h  FluentFramePainter.h  FluentGroupBox.h  FluentIcon.h  FluentIconButton.h  FluentInfoBar.h  FluentKeySequenceEdit.h  FluentLabel.h  FluentLineEdit.h  FluentListView.h  FluentLottieWidget.h  FluentMainWindow.h  FluentMenu.h  FluentMenuBar.h  FluentMessageBox.h  (+29 more)
include/Fluent/datePicker/: FluentCalendarPopup.h
resources/icons/: fluent_icons.qrc
src/: FluentAngleSelector.cpp  FluentAnimatedButton.cpp  FluentAnimatedIcon.cpp  FluentAnnotatedScrollBar.cpp  FluentAutoSuggestBox.cpp  FluentButton.cpp  FluentButtonVisuals_p.h  FluentCalendarPicker.cpp  FluentCard.cpp  FluentCheckBox.cpp  FluentCodeEditor.cpp  FluentColorDialog.cpp  FluentColorPicker.cpp  FluentComboBox.cpp  FluentCommandBar.cpp  FluentCppHighlighter.cpp  FluentDatePicker.cpp  FluentDateRangePicker.cpp  FluentDiagnostics.cpp  FluentDial.cpp  FluentDialog.cpp  FluentDropDownButton.cpp  FluentFlowLayout.cpp  FluentFlyout.cpp  FluentGroupBox.cpp  FluentIcon.cpp  FluentInfoBar.cpp  FluentInputVisuals_p.h  FluentItemViewPaintSupport.h  FluentKeySequenceEdit.cpp  FluentLabel.cpp  FluentLineEdit.cpp  FluentListView.cpp  FluentLottieWidget.cpp  FluentMainWindow.cpp  FluentMenu.cpp  FluentMenuBar.cpp  FluentMenuPopupHost.cpp  FluentMenuPopupHost.h  FluentMessageBox.cpp  (+28 more)
src/colorPicker/: ColorPickerWidgets.cpp
src/datePicker/: FluentCalendarPopup.cpp  FluentWheelPickerSupport.cpp  FluentWheelPickerSupport.h
tests/: QtFluentWidgetsDesignerCompatTest.cpp  QtFluentWidgetsVisualSmokeTest.cpp
tests/ui/: DesignerCompatMainWindow.ui  DesignerPromotedMainWindow.ui
tools/: render_demo_visual_baselines.ps1  run_demo_interaction_smoke.ps1
